# fastapi-project

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 9ab8e92ebbe3_some_fixes.py  f64b7a6bc336_rename_is_archived_to_is_completed.py
task-cruds/: main.py
task-cruds/api_v1/: __init__.py
task-cruds/api_v1/habits/: habits_crud.py  habits_dependencies.py  habits_schemas.py  habits_views.py
task-cruds/api_v1/tasks/: crud.py  dependencies.py  schemas.py  views.py
task-cruds/core/: __init__.py  config.py
task-cruds/core/models/: __init__.py  base.py  db_helper.py  task.py
task-cruds/web/static/: main.js  script.js  style.css
task-cruds/web/static/modules/: task.js  tasks-chart.js  tasks-stats.js  tasks.js
task-cruds/web/templates/: index.html
