[project]
name = "project"
version = "0.1.0"
description = "Веб-планировщик задач на Python 3.13 (FastAPI)"
authors = [
    {name = "Максим",email = "daseoffc@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "aiofiles (==24.1.0)",
    "aiosqlite (==0.21.0)",
    "alembic (==1.15.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "fastapi (==0.115.11)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "jinja2 (==3.1.5)",
    "mako (==1.3.9)",
    "markupsafe (==3.0.2)",
    "pydantic (==2.10.6)",
    "pydantic-settings (==2.8.1)",
    "pydantic-core (==2.27.2)",
    "python-dotenv (==1.0.1)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.38)",
    "starlette (==0.46.0)",
    "typing-extensions (==4.12.2)",
    "uvicorn (==0.34.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
